--- a/static/css/new.css
+++ b/static/css/new.css
@@ -70,6 +70,18 @@ textarea.yx-item {
     font-size: 200px !important;
     direction: ltr;
     cursor: pointer;
-    width: 202px;
     height: 61px;
+}
+input.imgUpload  {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    opacity: 0;
+    -ms-filter: 'alpha(opacity=0)';
+    font-size: 200px !important;
+    direction: ltr;
+    cursor: pointer;
+    height: 33px;
+    width: 219px;
 }
