--- a/templates/new.html
+++ b/templates/new.html
@@ -1,6 +1,8 @@
 {% extends 'layout.html' %} {% block stylesheet %}
 <link rel="stylesheet" href="/static/css/post.css" />
-<link rel="stylesheet" href="/static/css/new.css" />{% endblock %} {% block main %}
+<link rel="stylesheet" href="/static/css/new.css" />
+<link rel="stylesheet" type="text/css" href="/static/jquery-ui-1.11.0/jquery-ui.css">
+<link href="/static/aehlke-tag-it-1d84585/css/jquery.tagit.css" rel="stylesheet" type="text/css">{% endblock %} {% block main %}
 <section id="pane-main">
     <div id="custom-nav" data-id="index"></div>
     <section id="main-container">
@@ -28,8 +30,13 @@
                                         </div>
                                     </div>
                                     <div class="o-single-content__body o-single-content__body--main">
+                                        
                                         <aside id='social-bar' class="c-social-bar c-social-bar--vertical c-social-bar--colored c-social-bar--sqaured c-social-bar--left js-social-bar" data-component="SocialBar" data-post-title="爱范儿客户端新版上线 不妥协只为做到更好" data-post-link="http%3A%2F%2Fwww.ifanr.com%2F695851" data-post-summary="终于加入了这些功能，泪奔。" data-post-id="695851" data-fixed-start="#article-content" data-fixed-end="#footer-rec-posts"></aside>
                                         <article class="o-single-content__body__content c-article-content s-single-article js-article">
+                                            <div class="tag">
+                        <input type="hidden" name="tag" id="qSingleField" value="">
+                        <ul id="qTags" class=""></ul>
+                    </div>
                                             <div class="add-bar">
                                                 <a class="med button-alt button-add add-text" href="javascript:void(0);">添加文字</a>
                                                 <a class="med button-alt button-add add-image" href="javascript:void(0);">添加图片<input class="imgUpload" type="file" name="files" data-url="/upload/image"></a>
@@ -49,8 +56,8 @@
                         <div class="message">
                             <p>Log in to ESPN or join to view your favorites</p>
                         </div>
-                        <a class="button med register" href="#" data-route="false" data-behavior="overlay" tref="/members/v5_0/register" data-regformid="espn_bbc" data-language="en" data-affiliatename="espn">发布</a>
-                        <a class="med button-alt sign-in" href="#" data-route="false" data-behavior="overlay" tref="/members/v3_1/login" data-regformid="espn_bbc" data-language="en" data-affiliatename="espn">保存</a>
+                        <a class="button med register new-post" href="#" data-route="false" data-behavior="overlay" tref="/members/v5_0/register" data-regformid="espn_bbc" data-language="en" data-affiliatename="espn">发布</a>
+                        <a class="med button-alt sign-in save-post" href="#" data-route="false" data-behavior="overlay" tref="/members/v3_1/login" data-regformid="espn_bbc" data-language="en" data-affiliatename="espn">保存</a>
                     </div>
                 </div>
             </section>
@@ -62,6 +69,8 @@
 <script src="/static/js/jQuery-File-Upload-9.12.5/js/vendor/jquery.ui.widget.js"></script>
 <script src="/static/js/jQuery-File-Upload-9.12.5/js/jquery.iframe-transport.js"></script>
 <script src="/static/js/jQuery-File-Upload-9.12.5/js/jquery.fileupload.js"></script>
+<script src="/static/jquery-ui-1.11.0/jquery-ui.js"></script>
+<script src="/static/aehlke-tag-it-1d84585/js/tag-it.js"></script>
 <script type="text/javascript">
 $(document).ready(function() {
     var nowAddBar;
@@ -126,6 +135,24 @@ $(document).ready(function() {
                 insertTextAtCursor(text);
             }
         });
+    });
+
+    $(document).on('click', '.new-post', function() {
+    }); 
+
+    var sampleTags = [];
+    $.getJSON('/get/tags', function(data) {
+        $.each(data, function(key, val) {
+            sampleTags.push(val);
+        });
+    });
+
+    $("#qTags").tagit({
+        placeholderText: '添加标签，让更多的人发现',
+        availableTags: sampleTags,
+        singleField: true,
+        allowSpaces: true, //标签中是否允许空格
+        singleFieldNode: $('#qSingleField') //将值保存到mySingleField元素
     });
 });
 </script>
