--- a/templates/new.html
+++ b/templates/new.html
@@ -25,18 +25,17 @@
                                                 <span class="c-article-header-meta__time">n 分钟前</span>
                                             </div>
                                             <h1 class="c-single-normal__title">
-                                              <span  class="yx-item yx-title" contenteditable="true">在这里输入文章标题</span>
+                                              <span  class="yx-title" contenteditable="true">在这里输入文章标题</span>
                                             </h1>
                                         </div>
                                     </div>
                                     <div class="o-single-content__body o-single-content__body--main">
-                                        
-                                        <aside id='social-bar' class="c-social-bar c-social-bar--vertical c-social-bar--colored c-social-bar--sqaured c-social-bar--left js-social-bar" data-component="SocialBar" data-post-title="爱范儿客户端新版上线 不妥协只为做到更好" data-post-link="http%3A%2F%2Fwww.ifanr.com%2F695851" data-post-summary="终于加入了这些功能，泪奔。" data-post-id="695851" data-fixed-start="#article-content" data-fixed-end="#footer-rec-posts"></aside>
+                                        <aside id='social-bar' class="c-social-bar c-social-bar--vertical c-social-bar--colored c-social-bar--sqaured c-social-bar--left js-social-bar"></aside>
                                         <article class="o-single-content__body__content c-article-content s-single-article js-article">
-                                            <div class="tag">
-                        <input type="hidden" name="tag" id="qSingleField" value="">
-                        <ul id="qTags" class=""></ul>
-                    </div>
+                                            <div class="tag-bar">
+                                                <input type="hidden" name="tag" id="tagInput" value="">
+                                                <ul id="postTags" class=""></ul>
+                                            </div>
                                             <div class="add-bar">
                                                 <a class="med button-alt button-add add-text" href="javascript:void(0);">添加文字</a>
                                                 <a class="med button-alt button-add add-image" href="javascript:void(0);">添加图片<input class="imgUpload" type="file" name="files" data-url="/upload/image"></a>
@@ -78,27 +77,29 @@ $(document).ready(function() {
         dataType: 'json',
         done: function(e, data) {
             $.each(data.result.files, function(index, file) {
-                $('#article-header').css('background-image', 'url('+file.name+')');
+                $('#article-header').css('background-image', 'url(' + file.name + ')');
             });
         }
     });
+
     function imgUpload() {
         $('.imgUpload').fileupload({
-        dataType: 'json',
-        done: function(e, data) {
-            $.each(data.result.files, function(index, file) {
-                nowAddBar.after('<div class="yx-item"><img class="alignnone size-full wp-image-695550 aligncenter" src="'+file.name+'" sizes="(max-width: 720px) 100vw, 720px"><div class="yx-img-info" contenteditable="true">在这里添加图片描述</div></div><div class="add-bar"><a class="med button-alt button-add add-text" href="javascript:void(0);">添加文字</a><a class="med button-alt button-add add-image" href="javascript:void(0);">添加图片<input class="imgUpload" type="file" name="files" data-url="/upload/image"></a><a class="med button-alt button-add add-video" href="javascript:void(0);">添加视频</a></div>');
-                imgUpload();
-            });
-        }
-    });
+            dataType: 'json',
+            done: function(e, data) {
+                $.each(data.result.files, function(index, file) {
+                    nowAddBar.after('<div class="yx-item"><img class="alignnone size-full wp-image-695550 aligncenter" src="' + file.name + '" sizes="(max-width: 720px) 100vw, 720px"><div class="yx-img-info" contenteditable="true">在这里添加图片描述</div></div><div class="add-bar"><a class="med button-alt button-add add-text" href="javascript:void(0);">添加文字</a><a class="med button-alt button-add add-image" href="javascript:void(0);">添加图片<input class="imgUpload" type="file" name="files" data-url="/upload/image"></a><a class="med button-alt button-add add-video" href="javascript:void(0);">添加视频</a></div>');
+                    imgUpload();
+                });
+            }
+        });
     }
     imgUpload();
 
-    
+
     $(document).on('click', '.add-image', function() {
         nowAddBar = $(this).parent();
     });
+
     function insertTextAtCursor(text) {
         var sel, range, html;
         if (window.getSelection) {
@@ -137,9 +138,6 @@ $(document).ready(function() {
         });
     });
 
-    $(document).on('click', '.new-post', function() {
-    }); 
-
     var sampleTags = [];
     $.getJSON('/get/tags', function(data) {
         $.each(data, function(key, val) {
@@ -147,12 +145,39 @@ $(document).ready(function() {
         });
     });
 
-    $("#qTags").tagit({
+    $("#postTags").tagit({
         placeholderText: '添加标签，让更多的人发现',
         availableTags: sampleTags,
         singleField: true,
         allowSpaces: true, //标签中是否允许空格
-        singleFieldNode: $('#qSingleField') //将值保存到mySingleField元素
+        singleFieldNode: $('#tagInput') //将值保存到mySingleField元素
+    });
+
+
+    $(document).on('click', '.new-post', function() {
+        var content = "";
+        $(".yx-item").each(function() {
+          content = content + $(this).prop("outerHTML");
+        });
+        $.ajax({
+            type: "POST",
+            contentType: "application/json; charset=utf-8",
+            dataType: "json",
+            url: "/new",
+            data: JSON.stringify({
+                title: $('.yx-title').text(),
+                cover: $('#article-header').css('background-image'),
+                content: content,
+            }),
+            success: function(msg) {
+                if (msg.success == 0) {
+                    window.location.replace(msg.redirect);
+                }
+            },
+            error: function(msg) {
+                alert("error");
+            }
+        });
     });
 });
 </script>
