--- a/static/css/new.css
+++ b/static/css/new.css
@@ -42,9 +42,12 @@ textarea.yx-item {
 .yx-title {
 	border: 2px dashed rgba(255, 255, 255, 1);
 	display: block;
+    padding: 10px;
+    border-radius: 5px;  
 }
 .yx-title:hover {
 	border: 2px solid rgba(255, 255, 255, 1);
+    border-radius: 5px;
 }
 .button-title-image {
 	color: #fff;
@@ -108,4 +111,19 @@ input.imgUpload  {
 .yx-img-info:hover {
     border: 2px solid rgba(33, 117, 208, .5);
     border-radius: 5px;
+}
+.tag-bar {
+    border: 2px dashed rgba(33, 117, 208, .5);
+    padding: 10px;
+    border-radius: 5px;   
+    margin-bottom: 30px;
+}
+.tag-bar:hover {
+    border: 2px solid rgba(33, 117, 208, .5);
+    border-radius: 5px;
+}
+.ui-widget-content {
+    background: #fff !important;
+    color: #333333;
+    font-size: 14px !important;
 }
