--- a/static/css/post.css
+++ b/static/css/post.css
@@ -902,6 +902,30 @@ h1.c-single-normal__title {
 .private-btn:hover i {
     background-position: -144px -185px;
 }
+.c-article-likes__button:hover {
+    background-color: #f5f5f5;
+}
+.c-article-likes__counter {
+    display: inline-block;
+    font-size: 14px;
+    line-height: 40px;
+}
+.s-single-article {
+    margin-bottom: 23px;
+}
+#rPostBtn {
+    position: absolute;
+    right: 76px;
+    margin-top: 6px;
+    padding: 5px 10px;
+    z-index: 999;
+}
+.note-editor .note-editable {
+    min-height: 124px;
+}
+.comment-box {
+	margin-top: 30px;
+}
 
 
 .yx-item img{
