--- a/templates/post.html
+++ b/templates/post.html
@@ -87,69 +87,9 @@
                                         </div>
                                         <div class="o-single-content__body__content">
                                             <div id="article-comments" class="c-article-comments " data-component="ArticleCommentsComponent" data-post-id="695851">
-                                                <h5 class="c-card-category c-article-comments__headline">文章评论(<span class="js-placeholder-comments-counter">31</span>)</h5>
+                                                <h5 class="c-card-category c-article-comments__headline">全部评论(<span class="js-placeholder-comments-counter">31</span>)</h5>
                                                 <div class="c-article-comments__body js-comments-body">
                                                     <ul class="c-article-comments__list js-comments-list">
-                                                        <li id="comment-1032989" class="c-article-comments-item"><img class="c-article-comments-item__avatar" src="http://gravatar.ifanrx.com/avatar/6e9069ddddb70ce78f23295b2cbc76e3?s=80&amp;d=%2F%2Fifanr.b0.upaiyun.com%2Fsite-static%2Fifanr-2.0%2Fdist%2Fimages%2Fcommon%2Fgravatar.jpg" alt="" />
-                                                            <div class="c-article-comments-item__info is-high js-single-comment" data-comment-username="好累的Robert" data-comment-id="1032989">
-                                                                <span class="c-article-comments-item__name">好累的Robert</span>
-                                                                <span class="c-article-comments-item__meta">来自 iPhone 客户端, 2016-08-04 09:50:08</span>
-                                                                <span class="c-article-comments-item__hint js-show-comment">*评分过低，点击显示隐藏评论*</span>
-                                                                <div class="c-article-comments-item__content">
-                                                                    <p>iPad版何时开始做？</p>
-                                                                </div>
-                                                                <button class="c-article-comments-item__reply js-reply-comment">回复</button>
-                                                                <button class="c-article-comments-item-voting c-article-comments-item-voting--down js-vote-down ">0</button>
-                                                                <button class="c-article-comments-item-voting c-article-comments-item-voting--up js-vote-up ">25</button>
-                                                            </div>
-                                                            <ul class="c-article-comments-replies c-article-comments-item__info js-child-comments">
-                                                                <li id="comment-1033011" class="c-article-comments-replies__item  js-single-comment" data-comment-username="Ernest He | 何世友" data-comment-id="1033011">
-                                                                    <div class="c-article-comments-replies__item__wrapper">
-                                                                        <span class="c-article-comments-item__name">Ernest He | 何世友: <a class="comment-at" href="#comment-1032989" "="">@好累的Robert</a></span>
-                                                                        <span class="c-article-comments-item__meta">来自 iPhone 客户端, 2016-08-04 10:25:52</span>
-                                                                        <div class="c-article-comments-item__hint c-article-comments-item__hint--secondary js-show-comment">
-                                                                            <span>评分过低，点击显示隐藏评论</span>
-                                                                        </div>
-                                                                        <div class="c-article-comments-item__content">
-                                                                            <p>iPad 我们有计划了。耐心等候，我也是 iPad 用户～</p>
-                                                                        </div>
-                                                                        <button class="c-article-comments-item__reply c-article-comments-replies__reply js-reply-comment">回复</button>
-                                                                        <button class="c-article-comments-item-voting c-article-comments-item-voting--down js-vote-down ">0</button>
-                                                                        <button class="c-article-comments-item-voting c-article-comments-item-voting--up js-vote-up ">0</button>
-                                                                    </div>
-                                                                </li>
-                                                                <li id="comment-1033043" class="c-article-comments-replies__item  js-single-comment" data-comment-username="InNonIr" data-comment-id="1033043">
-                                                                    <div class="c-article-comments-replies__item__wrapper">
-                                                                        <span class="c-article-comments-item__name">InNonIr: <a class="comment-at" href="#comment-1033011" "="">@Ernest He | 何世友</a></span>
-                                                                        <span class="c-article-comments-item__meta">来自 Android 客户端, 2016-08-04 12:10:34</span>
-                                                                        <div class="c-article-comments-item__hint c-article-comments-item__hint--secondary js-show-comment">
-                                                                            <span>评分过低，点击显示隐藏评论</span>
-                                                                        </div>
-                                                                        <div class="c-article-comments-item__content">
-                                                                            <p>提个建议啊，爱范儿无图模式下 能不能加个点击再加载图片的功能呀，毕竟有时候还是想看个图片的，像知乎澎湃新闻那样的。</p>
-                                                                        </div>
-                                                                        <button class="c-article-comments-item__reply c-article-comments-replies__reply js-reply-comment">回复</button>
-                                                                        <button class="c-article-comments-item-voting c-article-comments-item-voting--down js-vote-down ">0</button>
-                                                                        <button class="c-article-comments-item-voting c-article-comments-item-voting--up js-vote-up ">3</button>
-                                                                    </div>
-                                                                </li>
-                                                                <li id="comment-1033068" class="c-article-comments-replies__item  js-single-comment" data-comment-username="孙航" data-comment-id="1033068">
-                                                                    <div class="c-article-comments-replies__item__wrapper">
-                                                                        <span class="c-article-comments-item__name">孙航: <a class="comment-at" href="#comment-1033043">@InNonIr</a></span>
-                                                                        <span class="c-article-comments-item__meta">2016-08-04 13:42:02</span>
-                                                                        <div class="c-article-comments-item__hint c-article-comments-item__hint--secondary js-show-comment">
-                                                                            <span>评分过低，点击显示隐藏评论</span>
-                                                                        </div>
-                                                                        <div class="c-article-comments-item__content">
-                                                                            <p>这个提议挺好，如果能有动图可以点击再播放的功能就更好了（玩物志那文章图片真是太大了.）</p>
-                                                                        </div>
-                                                                        <button class="c-article-comments-item__reply c-article-comments-replies__reply js-reply-comment">回复</button>
-                                                                        <button class="c-article-comments-item-voting c-article-comments-item-voting--down js-vote-down ">0</button>
-                                                                        <button class="c-article-comments-item-voting c-article-comments-item-voting--up js-vote-up ">0</button>
-                                                                    </div>
-                                                                </li>
-                                                            </ul>
-                                                        </li>
                                                     </ul>
                                                 </div>
                                             </div>
@@ -273,6 +213,33 @@ $(document).ready(function() {
                 alert("error");
             }
         });
+    });
+
+    $.getJSON('/reply/2', function(data) {
+        var all_replys_text = '';
+        var all_replys = data.list;
+        for (var i=0;i<all_replys.length;i++)
+        {
+            var reply = all_replys[i];
+            var inner_replys_text = '';
+            if (reply.reply_replys) {
+                var inner_replys = reply.reply_replys;
+                for (var j=0;j<inner_replys.length;j++)
+                {
+                    var inner_reply = inner_replys[j];
+                    inner_replys_text += '<li id="comment-'+inner_reply.id+'" class="c-article-comments-replies__item  js-single-comment" data-comment-username="'+inner_reply.author_username+'" data-comment-id="'+inner_reply.id+'"><div class="c-article-comments-replies__item__wrapper"><span class="c-article-comments-item__name">'+inner_reply.author_username+': <a class="comment-at" href="#comment-1032989" "="">@'+inner_reply.author_username+'</a></span><span class="c-article-comments-item__meta">'+inner_reply.created+'</span><div class="c-article-comments-item__content">'+inner_reply.content+'</div><button class="c-article-comments-item__reply c-article-comments-replies__reply js-reply-comment">回复</button><button class="c-article-comments-item-voting c-article-comments-item-voting--down js-vote-down ">'+inner_reply.up_num+'</button><button class="c-article-comments-item-voting c-article-comments-item-voting--up js-vote-up ">'+inner_reply.down_num+'</button></div></li>';
+                }
+                if (inner_replys_text!='') {
+                    inner_replys_text='<ul class="c-article-comments-replies c-article-comments-item__info js-child-comments">'+inner_replys_text+'</ul>'
+                }
+            }
+
+            all_replys_text += '<li id="comment-'+reply.id+'" class="c-article-comments-item"><img class="c-article-comments-item__avatar" src="http://gravatar.ifanrx.com/avatar/6e9069ddddb70ce78f23295b2cbc76e3?s=80&amp;d=%2F%2Fifanr.b0.upaiyun.com%2Fsite-static%2Fifanr-2.0%2Fdist%2Fimages%2Fcommon%2Fgravatar.jpg" alt=""><div class="c-article-comments-item__info is-high js-single-comment" data-comment-username="'+reply.author_username+'" data-comment-id="'+reply.id+'"> <span class="c-article-comments-item__name">'+reply.author_username+'</span><span class="c-article-comments-item__meta">'+reply.created+'</span><div class="c-article-comments-item__content">'+reply.content+'</div><button class="c-article-comments-item__reply js-reply-comment">回复</button><button class="c-article-comments-item-voting c-article-comments-item-voting--down js-vote-down ">'+reply.up_num+'</button><button class="c-article-comments-item-voting c-article-comments-item-voting--up js-vote-up ">'+reply.down_num+'</button></div>'+inner_replys_text+'</li>';
+
+        }
+        if (all_replys_text!='') {
+            $('.c-article-comments__list').html(all_replys_text);
+        }
     });
 });
 </script>
