--- a/static/css/post.css
+++ b/static/css/post.css
@@ -665,7 +665,7 @@ h1.c-single-normal__title {
     padding: 0;
     margin: 0;
     background-color: #f9fafc;
-    border-left: 3px solid #e5e5e5;
+    border-left: 3px solid #e3e6ee;
 }
 .c-article-comments-item__info {
     display: block;
